testData/diagnostics/const_scope_3.diag.txt
testData/diagnostics/const_scope_3.nut line = (7) column = (6) : error: Unknown variable [x]
print(x)
      ^

